# stereoVision

./: CMakeLists.txt  Makefile  README.md
bash_scripts/: getall.sh
calib_files/: mystereocalib.yml
calib_files/calib_18_6/: mystereocalib.yml
calib_files/calib_6_8/: mystereocalib.yml
img/calib_magnet_circle_110/: camera_param_left.yaml  camera_param_right.yaml
include/: Camera.hpp  General.hpp  Preprocess.hpp  Screen.hpp  StereoDepth.hpp  TwinCamera.hpp  WriteToMesh.hpp  camera.hpp  camera_control.hpp  img_cutter.hpp  pclGetPlanes.hpp  pclView.hpp  pcl_get_planes.hpp  pcl_view.hpp  preprocess.hpp  screen.hpp  square_recog.hpp  stereo_3d_tools.hpp  stereo_camera_calibration.hpp  stereo_depth.hpp  twin_camera.hpp  volume_substraction.hpp  write_to_mesh.hpp
lib/: Camera.cpp  Preprocess.cpp  Screen.cpp  StereoDepth.cpp  TwinCamera.cpp  WriteToMesh.cpp  camera.cpp  camera_control.cpp  img_cutter.cpp  pclGetPlanes.cpp  pclView.cpp  pcl_get_planes.cpp  pcl_view.cpp  preprocess.cpp  screen.cpp  square_recog.cpp  stereo_3d_tools.cpp  stereo_camera_calibration.cpp  stereo_depth.cpp  twin_camera.cpp  volume_substraction.cpp  volume_substraction.hpp  write_to_mesh.cpp
prototypes/green_filter/: a.out  in_the_darkest_night.cpp
src/: GetPercentage.cpp  GetTruckPercentagePlanes.cpp  SetEmptyTruck.cpp  SetTruckPlanes.cpp  StereoMain.cpp  StereoParamSet.cpp  calibrator.cpp  camera_calibration.cpp  capture_helper.cpp  opencv_reproject_image_pcl.cpp  square_selection.cpp  stereocalibrate.cpp
test/: testCamera.cpp  testGetTruckPercentagePlanes.cpp  testImgCutter.cpp  testLoadPlane.cpp  testPclGetPlanes.cpp  testPclView.cpp  testScreen.cpp  testSetTruckPlanes.cpp  testSquareRecog.cpp  testStereo.cpp  testTwin.cpp  testVolumeSubstraction.cpp  test_stereo_3d_tools.cpp
