cmake_minimum_required(VERSION 2.6 FATAL_ERROR)

project( stereoVision )

find_package( PCL 1.2 )
#find_package(VTK 6.1 REQUIRED NO_MODULE)
find_package( Boost COMPONENTS system thread REQUIRED )

add_definitions(-std=c++11)

include_directories (${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
add_definitions(${Boost_DEFINITIONS})

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

find_package( OpenCV REQUIRED )
include_directories("${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/3rdParty/capture_helper/include" )

file( GLOB LIB_SOURCES lib/*.cpp )
file( GLOB LIB_HEADERS include/*.hpp )
add_library( Camera lib/camera.cpp )
add_library( Preprocess lib/preprocess.cpp )
add_library( Screen lib/screen.cpp )
add_library( StereoDepth lib/preprocess.cpp lib/stereo_depth.cpp )
add_library( TwinCamera lib/twin_camera.cpp )
add_library( pclView lib/pcl_view.cpp )
add_library( pclGetPlanes lib/pcl_get_planes.cpp )
add_library( WriteToMesh lib/write_to_mesh.cpp )
add_library( ImgCutter lib/img_cutter.cpp )
add_library( stereoVisionLibs ${LIB_SOURCES} ) 
add_library( VolumeSubstraction lib/volume_substraction.cpp )
add_library( Stereo3DTools lib/stereo_3d_tools.cpp )

add_library( camera_control 3rdParty/capture_helper/lib/camera_control.cpp )

add_executable( setTruckPlanes src/SetTruckPlanes.cpp )
add_executable( getTruckPercentagePlanes src/GetTruckPercentagePlanes.cpp )
add_executable( setEmptyTruck src/SetEmptyTruck.cpp )
add_executable( getPercentage src/GetPercentage.cpp )
add_executable( stereocalibrate src/stereocalibrate.cpp )
add_executable( StereoParamSet src/StereoParamSet.cpp )
add_executable( squareSelection src/square_selection.cpp )
#test programs
add_executable( testCamera test/testCamera.cpp )
add_executable( testTwin test/testTwin.cpp )
add_executable( testPclView test/testPclView.cpp )
add_executable( testPclGetPlanes test/testPclGetPlanes.cpp )
add_executable( testLoadPlane test/testLoadPlane.cpp )
add_executable( testSetTruckPlanes test/testSetTruckPlanes.cpp )
add_executable( testGetTruckPercentagePlanes test/testGetTruckPercentagePlanes.cpp )
add_executable( testImgCutter test/testImgCutter.cpp )
add_executable( testSquareRecog test/testSquareRecog.cpp )
add_executable( testVolumeSubstraction test/testVolumeSubstraction.cpp )


target_link_libraries( setTruckPlanes ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes )
target_link_libraries( getTruckPercentagePlanes ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes )
target_link_libraries( setEmptyTruck ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth WriteToMesh )
target_link_libraries( getPercentage ${OpenCV_LIBS} ${PCL_LIBRARIES} Screen TwinCamera camera_control Camera Preprocess StereoDepth WriteToMesh )
target_link_libraries( stereocalibrate ${OpenCV_LIBS} TwinCamera camera_control Camera )
target_link_libraries( StereoParamSet ${OpenCV_LIBS} TwinCamera camera_control Camera Preprocess StereoDepth Screen )
target_link_libraries( squareSelection ${OpenCV_LIBS} )
#test program linkers
target_link_libraries( testCamera ${OpenCV_LIBS} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testTwin ${OpenCV_LIBS} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testPclView ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testPclGetPlanes ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testLoadPlane ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testSetTruckPlanes ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testGetTruckPercentagePlanes ${OpenCV_LIBS} ${PCL_LIBRARIES} TwinCamera camera_control Camera Preprocess StereoDepth pclView pclGetPlanes Screen )
target_link_libraries( testImgCutter ${OpenCV_LIBS} ImgCutter )
target_link_libraries( testSquareRecog ${OpenCV_LIBS} )
target_link_libraries( testVolumeSubstraction ${OpenCV_LIBS} Stereo3DTools VolumeSubstraction )
